--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>2nd Workshop on Extraction and Evaluation of Knowledge Entities from Scientific Documents (EEKE2021)</title>
+  <title>Website of Yiqing Zhang</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
