--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 5%">
         <p> Hi, I am Ballball (Yiqing Zhang), welcome to visit my website.        </p>
+        <p>&nbsp;</p>
         <p align="center"><strong> 采蓝莓（Picking strawberries）</strong><br>
            <br>
  &nbsp;&nbsp;&nbsp;&nbsp;今天，我放假了。天气阴阴的，没有骄阳,也没有暴雨。妈妈高兴的对我说：&ldquo;刘阿姨今天约我们采蓝莓，蓝莓田在溧水。&rdquo;我兴奋极了，心想：蓝莓本来就贵，如果采到上等蓝莓的话，就挣&ldquo;翻&rdquo;了！于是我上网查了资料： <br>
@@ -129,7 +130,7 @@
  &nbsp;&nbsp;&nbsp;&nbsp;和妈妈以及刘阿姨等人在田间穿梭，我们你一言我一语，十分开心，享受着采摘果实的乐趣，并且大家还讨论着哪棵树上果子结的大，哪棵树上的果子结的甜。时间一点一点地过去，我和妈妈采了六七斤蓝莓，放入了六个塑料盒子中。 <br>
  &nbsp;&nbsp;&nbsp;&nbsp;原来乡间的生活如此的自由自在，无拘无束，我不禁想起了一句古诗： <br>
  &nbsp;&nbsp;&nbsp;&nbsp;&ldquo;牧童归去横牛背，短笛无腔信口吹&rdquo; </p>
-        <p align="center">((2020-09-01 at Nanjing)</p>
+        <p align="center">(2020-09-01 at Nanjing)</p>
         <p align="center"><strong>Dabaoen Temple</strong></p>
         <p><img src="images/dabaoanshi.jpg" width="540" height="960" alt=""/></p>
         <p>(2017-10-07 at Nanjing)</p>
