--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
       <div class="one-half column" style="margin-top: 5%">
         <p> Hi, I am Ballball (Yiqing Zhang), welcome to my website.        </p>
         <p>&nbsp;</p>
-        <h3 align="center" class="keynote">采蓝莓（Picking strawberries)</h3> 
+        <h3 align="center">采蓝莓（Picking strawberries)</h3> 
         <br>
            <br>
   <p align="center">
- &nbsp;&nbsp;&nbsp;&nbsp;今天，我放假了。天气阴阴的，没有骄阳,也没有暴雨。妈妈高兴的对我说：&ldquo;刘阿姨今天约我们采蓝莓，蓝莓田在溧水。&rdquo;我兴奋极了，心想：蓝莓本来就贵，如果采到上等蓝莓的话，就挣&ldquo;翻&rdquo;了！于是我上网查了资料： <br>
+ &nbsp;&nbsp;&nbsp;&nbsp;今天，我放假了。天气阴阴的，没有骄阳，也没有暴雨。妈妈高兴的对我说：&ldquo;刘阿姨今天约我们采蓝莓，蓝莓田在溧水。&rdquo;我兴奋极了，心想：蓝莓本来就贵，如果采到上等蓝莓的话，就挣&ldquo;翻&rdquo;了！于是我上网查了资料： <br>
  &nbsp;&nbsp;&nbsp;&nbsp;一、好的蓝莓外面一定有很多白霜； <br>
  &nbsp;&nbsp;&nbsp;&nbsp;二、好的蓝莓不硬也不软； <br>
  &nbsp;&nbsp;&nbsp;&nbsp;三、好的蓝莓又大又甜。 <br>
