--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <div class="one-half column" style="margin-top: 5%">
         <h3> Hi, I am Ballball (Yiqing Zhang), welcome to my website.</h3>
         <h4><a href="notes.html"># My Miscellaneous Notes</a></h4>
-        <h4><a href="pictures.html"># My Photos</a></h4>
+        <h4><a href="pictures.html"># My Pictures</a></h4>
       </div>
     </div>
   </div>
