--- a/pictures.html
+++ b/pictures.html
@@ -1,7 +1,7 @@
-<!DOCTYPE hatml>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
- 
+
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
@@ -111,25 +111,13 @@
 }
   </style>
 </head>
+
 <body>
-
-  <!-- Primary Page Layout
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <div class="row">
-      <div class="one-half column" style="margin-top: 5%">
-        <p><a href="index.html">Homepage</a></p>
-
-        <h3 align="center">Dabaoen Temple</h3> 
-        <p align="center"><img src="images/dabaoanshi.jpg" width="540" height="960" alt="" /></p>
-        <p align="right">(2017-10-07 at Nanjing)</p>
-        <p>&nbsp;</p>
-        <p></p>
-      </div>
-    </div>
-  </div>
-
-<!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<p><h3><a href="index.html">Homepage </a></h3>
+<h3># <a href="pictures/architecture.html">Architectures</a></h3> 
+<h3># Scenery</h3>
+<h3># Person</h3>
+&nbsp;</p>
+<p>&nbsp;</p>
 </body>
 </html>
