--- a/notes/activity/pickingblueberry.html
+++ b/notes/activity/pickingblueberry.html
@@ -4,7 +4,7 @@
 
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <title>Website of Yiqing Zhang</title>
   <meta name="description" content="">
   <meta name="author" content="">
@@ -108,6 +108,12 @@
 }
   .speaker {
 	font-weight: bold;
+}
+  body,td,th {
+	font-family: Raleway, HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+body {
+	background-image: url(../../images/background.jpg);
 }
   </style>
 </head>
