--- a/pictures/architecture/dabaoentemple.html
+++ b/pictures/architecture/dabaoentemple.html
@@ -1,10 +1,11 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE hatml>
 <html lang="en">
 <head>
  
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <title>Website of Yiqing Zhang</title>
   <meta name="description" content="">
   <meta name="author" content="">
@@ -108,6 +109,12 @@
 }
   .speaker {
 	font-weight: bold;
+}
+  body,td,th {
+	font-family: Raleway, HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+body {
+	background-image: url(../../images/background.jpg);
 }
   </style>
 </head>
