--- a/notes/activity/pickingblueberry.html
+++ b/notes/activity/pickingblueberry.html
@@ -24,7 +24,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="file:///Macintosh HD/Users/shounarushi/Desktop/BallBall/zhangyiqing2021.github.io/notes/images/favicon.png">
+   
   <style type="text/css">
   .jcdl {
 	font-style: italic;
@@ -114,6 +114,7 @@
 }
 body {
 	background-image: url(../../images/background.jpg);
+	background-repeat: no-repeat;
 }
   </style>
 </head>
