--- a/notes/activity/pickingblueberry.html
+++ b/notes/activity/pickingblueberry.html
@@ -115,6 +115,7 @@
 body {
 	background-image: url(../../images/background.jpg);
 	background-repeat: no-repeat;
+	background-position:top center;
 }
   </style>
 </head>
