--- a/pictures.html
+++ b/pictures.html
@@ -115,7 +115,10 @@
 body {
 	background-image: url(images/background.jpg);
 	background-repeat: no-repeat;
+	background-position:top center;
 }
+
+
   </style>
 </head>
 
