--- a/pictures/architecture/dabaoentemple.html
+++ b/pictures/architecture/dabaoentemple.html
@@ -115,6 +115,8 @@
 }
 body {
 	background-image: url(../../images/background.jpg);
+	background-repeat: no-repeat;
+	background-position:top center
 }
   </style>
 </head>
