--- a/notes/activities.html
+++ b/notes/activities.html
@@ -116,7 +116,9 @@ body {
 	background-image: url(../images/background.jpg);
 	background-repeat: no-repeat;
 	background-position:top center;
+	background-size: 100% 100%; 
 }
+
   </style>
 </head>
 
