--- a/pictures/architecture/dabaoentemple.html
+++ b/pictures/architecture/dabaoentemple.html
@@ -116,7 +116,8 @@
 body {
 	background-image: url(../../images/background.jpg);
 	background-repeat: no-repeat;
-	background-position:top center
+	background-position:top center；
+	background-size: 100% 100%; 
 }
   </style>
 </head>
