--- a/notes/activity/pickingblueberry.html
+++ b/notes/activity/pickingblueberry.html
@@ -116,7 +116,7 @@ body {
 	background-image: url(../../images/background.jpg);
 	background-repeat: no-repeat;
 	background-position:top center;
-	background-size: 100% 100%; 
+	background-size:cover;
 }
   </style>
 </head>
