--- a/pictures/architecture/dabaoentemple.html
+++ b/pictures/architecture/dabaoentemple.html
@@ -113,26 +113,25 @@
   body,td,th {
 	font-family: Raleway, HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-body {
-	background-image: url(../../images/background.jpg);
-	background-repeat: no-repeat;
-	background-position:top center；
-	background-size: 100% 100%; 
-}
   </style>
 </head>
 <body>
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <div class="row">
-      <div class="one-half column" style="margin-top: 5%">
+  <div class="container" align="center">
+    <div class="row" align="center">
+      <div class="one-half column" style="margin-top: 5%" align="center">
         <p><h4><a href="../../index.html">Homepage /</a> [<a href="../../pictures.html">Pictures</a>] /[<a href="../architecture.html">Architectures</a>]</h4></p>
 
         <h3 align="center">Dabaoen Temple</h3> 
-        <p align="center"><img src="../../images/dabaoanshi.jpg" width="540" height="960" alt="" /></p>
-        <p align="right">(2017-10-07 at Nanjing)</p>
+        <div style="text-align: center;">
+        <img src="../../images/dabaoanshi.jpg" width="540" height="960" alt=""  />
+         </div>
+        <div style="text-align: center;">
+        (2017-10-07 at Nanjing)</p>
+        </div>
+        
         <p>&nbsp;</p>
         <p></p>
       </div>
