--- a/index.html
+++ b/index.html
@@ -119,10 +119,12 @@ body {
 	background-size:cover;
 }
   </style>
+  
+   
 </head>
 <body>
-  <bgsound src="hhttps://zhangyiqing2021.github.io/music/bgm.mid" autostart="true" loop="infinite">
-
+ <audio autoplay="autoplay"><source src="music/bgm.mp3" type="audio/mpeg"></audio>
+ 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
