--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ body {
    
 </head>
 <body>
- <audio autoplay="autoplay"><source src="music/bgm.mp3" type="audio/mpeg"></audio>
+ <audio autoplay><source src="music/bgm.mp3" type="audio/mpeg"></audio>
  
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
