--- a/index.html
+++ b/index.html
@@ -123,14 +123,16 @@ body {
    
 </head>
 <body>
- <audio autoplay><source src="music/bgm.mp3" type="audio/mpeg"></audio>
- 
+
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
-      <div class="one-half column" style="margin-top: 5%">
-        <h3> Hi, I am Ballball (Yiqing Zhang), welcome to my website.</h3>
+      <div class="one-half column" style="margin-top: 0.5%">
+        <video width="800" height="600" preload="auto" muted autoplay >
+          <source src="videos/hello.mp4" type="video/mp4">
+        </video>
+        <h3>Hi, I am Ballball (Yiqing Zhang), welcome to my website.</h3>
         <h4><a href="notes.html"># My Miscellaneous Notes</a></h4>
         <h4><a href="pictures.html"># My Pictures</a></h4>
       </div>
