--- a/notes/activities.html
+++ b/notes/activities.html
@@ -125,5 +125,10 @@ body {
 <body>
 <h3><a href="../index.html">Homepage /</a> [<a href="../notes.html">Notes</a>] / [Activities]</h3>
 <h4># <a href="activity/pickingblueberry.html">Picking Blueberries</a></h4>
+<h4># <a href="activity/TO PROTECT THE EARTH.html">To Protect the Earth</a></h4>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
 </body>
 </html>
